# Sure-Smartie-Linux

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Docs/: Sure-Smartie-linux-spec.md  release-checklist.md  sure-smartie-disk-plugin.md  sure-smartie-gui-guide.md
Docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
Tests/: sure_lcd_test.py
build-desktop-test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  core_services_smoke  gui_smoke  plugin_loader_smoke  sure-smartie-gui  sure-smartie-gui.desktop  sure-smartie-linux  sure-smartie-linux-root.service  sure-smartie-linux-sleep.sh  sure-smartie-linux.env  sure-smartie-linux.service  template_engine_smoke
build-desktop-test/.qt/: QtDeploySupport.cmake
build-desktop-test/Testing/Temporary/: CTestCostData.txt
build-polkit-stage/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SureSmartieLinuxConfig.cmake  cmake_install.cmake  core_services_smoke  gui_smoke  sure-smartie-gui  sure-smartie-gui-save.policy  sure-smartie-gui.desktop  sure-smartie-linux  sure-smartie-linux-root.service  sure-smartie-linux-sleep.sh  sure-smartie-linux.env  sure-smartie-linux.service  sure-smartie-privileged-save  template_engine_smoke
build-polkit-stage/.qt/: QtDeploySupport.cmake
build-polkit-stage/sure_smartie_gui_autogen/MXUWEOXILK/: qrc_resources.cpp
build-review/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  core_services_smoke  gui_smoke  sure-smartie-gui  sure-smartie-gui-save.policy  sure-smartie-gui.desktop  sure-smartie-linux  sure-smartie-linux-root.service  sure-smartie-linux-sleep.sh  sure-smartie-linux.env  sure-smartie-linux.service  sure-smartie-privileged-save  template_engine_smoke
build-review/.qt/: QtDeploySupport.cmake
build-review/Testing/Temporary/: CTestCostData.txt
build-review/sure_smartie_gui_autogen/MXUWEOXILK/: qrc_resources.cpp
cmake/: SureSmartieLinuxConfig.cmake.in
configs/: config.json  plugin-example.json  stdout-example.json  sure-example.json  sure-example_test.json
include/sure_smartie/core/: App.hpp  Config.hpp  ConfigSerializer.hpp  ConfigValidator.hpp  GlyphSupport.hpp  Logger.hpp  MetricsSnapshotService.hpp  PreviewFrameRenderer.hpp  Types.hpp
include/sure_smartie/display/: DisplayFactory.hpp  IDisplay.hpp  StdoutDisplayDriver.hpp  SureDisplayDriver.hpp
include/sure_smartie/engine/: ScreenManager.hpp  TemplateEngine.hpp
include/sure_smartie/gui/: LcdPreviewWidget.hpp  MainWindow.hpp
include/sure_smartie/plugins/: PluginLoader.hpp  ProviderPlugin.hpp
include/sure_smartie/providers/: BuiltinProviderFactory.hpp  CpuProvider.hpp  GpuProvider.hpp  IProvider.hpp  NetworkProvider.hpp  RamProvider.hpp  SystemProvider.hpp
include/sure_smartie/serial/: SerialPort.hpp
packaging/desktop/: sure-smartie-gui.desktop.in
packaging/polkit/: sure-smartie-gui-save.policy.in
packaging/systemd/: sure-smartie-linux-root.service.in  sure-smartie-linux-sleep.sh.in  sure-smartie-linux.env  sure-smartie-linux.env.in  sure-smartie-linux.service.in
packaging/sysusers/: sure-smartie-linux.conf
plugins/: README.md  sure_smartie_demo_plugin.cpp  sure_smartie_disk_plugin.cpp
providers/: BuiltinProviderFactory.cpp  CpuProvider.cpp  GpuProvider.cpp  NetworkProvider.cpp  RamProvider.cpp  SystemProvider.cpp
scripts/: generate-icons.py  install-prebuilt-release.sh  install-system.sh  package-release.sh  uninstall-system.sh
sdk/example-plugin/: CMakeLists.txt  example_plugin.cpp
src/: main.cpp
src/core/: App.cpp  Config.cpp  ConfigSerializer.cpp  ConfigValidator.cpp  GlyphSupport.cpp  Logger.cpp  MetricsSnapshotService.cpp  PreviewFrameRenderer.cpp
src/display/: DisplayFactory.cpp  StdoutDisplayDriver.cpp  SureDisplayDriver.cpp
src/engine/: ScreenManager.cpp  TemplateEngine.cpp
src/gui/: LcdPreviewWidget.cpp  MainWindow.cpp  PrivilegedSaveHelper.cpp  main.cpp  resources.qrc
src/plugins/: PluginLoader.cpp
src/serial/: SerialPort.cpp
tests/: core_services_smoke.cpp  gui_smoke.cpp  plugin_loader_smoke.cpp  template_engine_smoke.cpp
